@@ -1,6 +1,6 @@
 Package: rgl
-Version: 0.81.708
-Date: 2008-09-30
+Version: 0.81.710
+Date: 2008-10-15
 Title: 3D visualization device system (OpenGL)
 Author: Daniel Adler <dadler@uni-goettingen.de>, Duncan Murdoch <murdoch@stats.uwo.ca>
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
